# BertiBox

./: .coveragerc  .gitignore  Makefile  README.md  bertibox-player.service  bertibox-web.service  database.py  init_db.py  install.sh  install_services.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  rfid_reader.py  run.py  setup.py  web_interface.py
scripts/: install.sh
src/: __init__.py  __main__.py  app.py  config.py
src/api/: __init__.py  media.py  player.py  playlists.py  tags.py  upload.py
src/core/: __init__.py  audio_manager.py  playback_controller.py  player.py  sleep_timer.py  tag_handler.py
src/database/: __init__.py  file_manager.py  manager.py  models.py  playlist_manager.py  settings_manager.py  tag_manager.py
src/utils/: __init__.py  helpers.py
src/websocket/: __init__.py  handlers.py
systemd/: bertibox-web.service
templates/: 404.html  explorer.html  index.html  player.html
tests/: README.md  conftest.py  test_api_media.py  test_api_playlists.py  test_api_tags.py  test_api_upload.py  test_core_player.py  test_database_manager.py  test_database_models.py  test_file_manager.py  test_playlist_manager.py  test_rfid_reader.py  test_settings_manager.py  test_tag_manager.py  test_utils_helpers.py  test_websocket_handlers.py
