[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bertibox"
version = "1.0.0"
description = "RFID-controlled MP3 player for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "BertiBox Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "Flask>=2.3.0",
    "Flask-SocketIO>=5.3.0",
    "SQLAlchemy>=2.0.0",
    "pygame>=2.5.0",
    "RPi.GPIO>=0.7.1",
    "mfrc522>=0.0.7",
    "requests>=2.31.0",
    "werkzeug>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
]

[project.scripts]
bertibox = "src.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/BertiBox"
Issues = "https://github.com/yourusername/BertiBox/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["templates/*.html", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | legacy
)/
'''

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "venv", ".venv", "build", "dist", "legacy"]
ignore = ["E203", "W503"]